@@ -1,3 +1,9 @@
+Thu Aug 18 16:34:51 1994  Theodore Y. Ts'o  (tytso at tsx-11)
+
+	* scc_retrv.c (srvname_match): Fix bug in srvname_match where so
+	that the server realm is really ignored in the compare, like it's
+	supposed to be.
+
 Tue Aug  2 04:07:17 1994  Tom Yu  (tlyu@dragons-lair)
 
 	* scc_maybe.c (krb5_scc_open_file): changed an #ifdef from
